# sysmayal4

./: DEPLOYMENT_GUIDE.md  INSTALL_V15.md  README.md  README_V15.md  license.txt  manifest.json  pyproject.toml  requirements.txt  setup.py
sysmayal/: __init__.py  hooks.py  modules.txt
sysmayal/config/: desktop.py
sysmayal/doctype/country_regulation/: country_regulation.json
sysmayal/doctype/distribution_contact/: distribution_contact.json
sysmayal/doctype/distribution_organization/: distribution_organization.json  distribution_organization_list.js
sysmayal/doctype/market_entry_plan/: market_entry_plan.json
sysmayal/fixtures/: country_regulation.json  workflows.json
sysmayal/page/sysmayal-dashboard/: sysmayal_dashboard.json
sysmayal/page/sysmayal_dashboard/: sysmayal_dashboard.js
sysmayal/report/compliance_status_report/: compliance_status_report.json
sysmayal/report/rd_project_status_report/: rd_project_status_report.json
sysmayal/setup/: __init__.py  install.py
sysmayal/sysmayal/: __init__.py
sysmayal_module/: __init__.py  distribution_organization.js  hooks.py  modules.txt  tasks.py
sysmayal_module/config/: desktop.py  docs.py
sysmayal_module/data_import/: __init__.py  bulk_importer.py
sysmayal_module/doctype/certification_document/: __init__.py
sysmayal_module/doctype/distribution_organization/: distribution_organization.js  distribution_organization_list.js
sysmayal_module/doctype/market_research/: market_research.js
sysmayal_module/page/sysmayal-dashboard/: sysmayal_dashboard.js
sysmayal_module/setup/: __init__.py  install.py
(+12 files in other folders)
