[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sysmayal"
authors = [
    {name = "Sysmayal Development Team", email = "dev@sysmayal.com"}
]
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "license.txt"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment", 
    "Framework :: Frappe",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Enterprise Resource Planning",
]
dependencies = [
    "frappe>=15.0.0",
    "requests>=2.28.0",
    "pandas>=1.5.0", 
    "openpyxl>=3.0.10",
    "xlrd>=2.0.1",
    "python-dateutil>=2.8.2",
]

[project.urls]
Home = "https://github.com/rogerboy38/sysmayal2"
Documentation = "https://github.com/rogerboy38/sysmayal2/docs"
Repository = "https://github.com/rogerboy38/sysmayal2.git"
"Bug Tracker" = "https://github.com/rogerboy38/sysmayal2/issues"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
]
